// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Table/User view management/TableViewDropdown Playground 1`] = `
<div
  className="storybook-container"
>
  <div
    className="iot--view-dropdown__container"
  >
    <div
      className="bx--dropdown__wrapper bx--list-box__wrapper"
      data-testid="TableViewDropdown"
      renderSelectedItem={[Function]}
    >
      
      <div
        aria-label="Select view"
        className="bx--dropdown bx--list-box"
        id="iot--view-dropdown"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-disabled={false}
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          className="bx--list-box__field"
          disabled={false}
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          title="My saved 1"
          type="button"
        >
          <span
            className="bx--list-box__label"
          >
            My saved 1
          </span>
          <div
            className="bx--list-box__menu-icon"
          >
            <svg
              aria-label="Open menu"
              fill="currentColor"
              focusable="false"
              height={16}
              name="chevron--down"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
              <title>
                Open menu
              </title>
            </svg>
          </div>
        </button>
        <div
          aria-labelledby="downshift-0-label"
          className="bx--list-box__menu"
          id="downshift-0-menu"
          onBlur={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          role="listbox"
          tabIndex={-1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Table/User view management/TableViewDropdown With state - edited 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "300px",
      }
    }
  >
    <div
      className="iot--view-dropdown__container"
    >
      <div
        className="bx--dropdown__wrapper bx--list-box__wrapper"
        data-testid="TableViewDropdown"
        renderSelectedItem={[Function]}
      >
        
        <div
          aria-label="Select view"
          className="bx--dropdown bx--list-box"
          id="iot--view-dropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-labelledby="downshift-0-label downshift-0-toggle-button"
            className="bx--list-box__field"
            disabled={false}
            id="downshift-0-toggle-button"
            onClick={[Function]}
            onKeyDown={[Function]}
            title="View All"
            type="button"
          >
            <span
              className="bx--list-box__label"
            >
              View All
            </span>
            <div
              className="bx--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height={16}
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <div
            aria-labelledby="downshift-0-label"
            className="bx--list-box__menu"
            id="downshift-0-menu"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            role="listbox"
            tabIndex={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Table/User view management/TableViewDropdown With state 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "300px",
      }
    }
  >
    <div
      className="iot--view-dropdown__container"
    >
      <div
        className="bx--dropdown__wrapper bx--list-box__wrapper"
        data-testid="TableViewDropdown"
        renderSelectedItem={[Function]}
      >
        
        <div
          aria-label="Select view"
          className="bx--dropdown bx--list-box"
          id="iot--view-dropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-labelledby="downshift-0-label downshift-0-toggle-button"
            className="bx--list-box__field"
            disabled={false}
            id="downshift-0-toggle-button"
            onClick={[Function]}
            onKeyDown={[Function]}
            title="View All"
            type="button"
          >
            <span
              className="bx--list-box__label"
            >
              View All
            </span>
            <div
              className="bx--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height={16}
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <div
            aria-labelledby="downshift-0-label"
            className="bx--list-box__menu"
            id="downshift-0-menu"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            role="listbox"
            tabIndex={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Table/User view management/TableViewDropdown With state and custom view selected 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "300px",
      }
    }
  >
    <div
      className="iot--view-dropdown__container"
    >
      <div
        className="bx--dropdown__wrapper bx--list-box__wrapper"
        data-testid="TableViewDropdown"
        renderSelectedItem={[Function]}
      >
        
        <div
          aria-label="Select view"
          className="bx--dropdown bx--list-box"
          id="iot--view-dropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-labelledby="downshift-0-label downshift-0-toggle-button"
            className="bx--list-box__field"
            disabled={false}
            id="downshift-0-toggle-button"
            onClick={[Function]}
            onKeyDown={[Function]}
            title="My saved 1"
            type="button"
          >
            <span
              className="bx--list-box__label"
            >
              My saved 1
            </span>
            <div
              className="bx--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height={16}
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <div
            aria-labelledby="downshift-0-label"
            className="bx--list-box__menu"
            id="downshift-0-menu"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            role="listbox"
            tabIndex={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
